# alphacluster

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
docs/superpowers/plans/: 2026-03-24-opportunity-cost-and-versioning.md  2026-03-24-optuna-tuning.md  2026-03-25-simple-action-space.md  2026-03-26-ablation-curriculum.md  2026-03-26-funding-vol-regime-features.md  2026-03-27-smart-optuna-v3.md
docs/superpowers/specs/: 2026-03-24-additional-features-design.md  2026-03-24-optuna-tuning-design.md  2026-03-24-reward-rebalance-design.md  2026-03-25-simple-action-space-design.md  2026-03-25-training-improvement-roadmap.md  2026-03-26-ablation-curriculum-design.md  2026-03-27-smart-optuna-v3-design.md  2026-03-29-feature-redesign-design.md
notebooks/: colab_ablation.ipynb  colab_optuna.ipynb  colab_optuna_simple.ipynb  colab_optuna_v2.ipynb  colab_optuna_v3_smart.ipynb  colab_train.ipynb  colab_train_simple.ipynb  kaggle_finetune_v3.ipynb  kaggle_train.ipynb
scripts/: backtest_3100k.py  download_data.py  download_multi.py  evaluate.py  train.py
src/alphacluster/: __init__.py  cli.py  config.py
src/alphacluster/agent/: __init__.py  config.py  network.py  trainer.py
src/alphacluster/backtest/: __init__.py  metrics.py  runner.py  visualizer.py
src/alphacluster/data/: __init__.py  downloader.py  indicators.py  live_feed.py  storage.py  validator.py
src/alphacluster/env/: __init__.py  account.py  mechanics.py  trading_env.py
src/alphacluster/tournament/: __init__.py  arena.py  elo.py  versioning.py
tests/: test_backtest.py  test_data.py  test_env.py  test_indicators.py  test_tournament.py
