[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alphacluster"
version = "0.1.0"
description = "AlphaZero-inspired deep RL backtesting system for crypto perpetual contract trading"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "torch>=2.0",
    "stable-baselines3>=2.0",
    "gymnasium>=0.29",
    "numpy",
    "pandas",
    "pyarrow",
    "requests",
    "websockets",
    "python-dotenv",
    "matplotlib",
    "tqdm",
    "rich",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]

[project.scripts]
alphacluster = "alphacluster.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
